--- a/peakrdl/python/templates/addrmap_memory.py.jinja
+++ b/peakrdl/python/templates/addrmap_memory.py.jinja
@@ -23,6 +23,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(MemoryWriteOnly):
         super().__init__(callbacks=callbacks,
                          address=address,
                          entries={{node.get_property('mementries')}},
+                         {% if 'accesswidth' in node.list_properties() -%}accesswidth={{node.get_property('accesswidth')}}{%- else -%}accesswidth={{node.get_property('memwidth')}}{%- endif -%},
                          width={{node.get_property('memwidth')}},
                          logger_handle=logger_handle,
                          inst_name=inst_name)
