Removed the functions previous internal to the package for determining if a memory was software read/write accessible in favour of the ones that are part of the systemRDL compiler itself in version 1.21.0

--- a/peakrdl/python/templates/addrmap.py.jinja
+++ b/peakrdl/python/templates/addrmap.py.jinja
@@ -69,7 +69,7 @@ from ..peakrdl_python import CallbackSet
         {%- endif %}
     {%- elif isinstance(node, systemrdlMemNode) %}
         {%- if node.is_array %}
-            {%- if is_mem_readable(node) and is_mem_writable(node) %}
+            {%- if node.is_sw_readable and node.is_sw_writable %}
     self.__{{node.inst_name}} = ( {% for node_instance_index in range(get_array_dim(node))  %}
                                        {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                    address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
@@ -77,7 +77,7 @@ from ..peakrdl_python import CallbackSet
                                                                                    inst_name='{{node.inst_name}}')
                                        {%- if not loop.last -%} ,  {%- endif -%}
                                        {% endfor %} )
-            {%- elif is_mem_readable(node) and not is_mem_writable(node) %}
+            {%- elif node.is_sw_readable and not node.is_sw_writable %}
     self.__{{node.inst_name}} = ( {% for node_instance_index in range(get_array_dim(node))  %}
                                        {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                    address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
@@ -85,7 +85,7 @@ from ..peakrdl_python import CallbackSet
                                                                                    inst_name='{{node.inst_name}}')
                                        {%- if not loop.last -%} ,  {%- endif -%}
                                        {% endfor %} )
-            {%- elif not is_mem_readable(node) and is_mem_writable(node) %}
+            {%- elif not node.is_sw_readable and node.is_sw_writable %}
     self.__{{node.inst_name}} = ( {% for node_instance_index in range(get_array_dim(node))  %}
                                        {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                    address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
@@ -95,17 +95,17 @@ from ..peakrdl_python import CallbackSet
                                        {% endfor %} )
             {%- endif %}
         {%- else %}
-            {%- if is_mem_readable(node) and is_mem_writable(node) %}
+            {%- if node.is_sw_readable and node.is_sw_writable %}
     self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                  address=self.address+{{node.address_offset}},
                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                    inst_name='{{node.inst_name}}')
-            {%- elif is_mem_readable(node) and not is_mem_writable(node) %}
+            {%- elif node.is_sw_readable and not node.is_sw_writable %}
     self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                  address=self.address+{{node.address_offset}},
                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                    inst_name='{{node.inst_name}}')
-            {%- elif not is_mem_readable(node) and is_mem_writable(node) %}
+            {%- elif not node.is_sw_readable and node.is_sw_writable %}
     self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
                                                                              address=self.address+{{node.address_offset}},
                                                                              logger_handle=logger_handle+'.{{node.inst_name}}',
