--- a/peakrdl/python/templates/addrmap_tb.py.jinja
+++ b/peakrdl/python/templates/addrmap_tb.py.jinja
@@ -588,7 +588,7 @@ class {{top_node.type_name}}_TestCase(unittest.TestCase):
         with patch(__name__ + '.' + 'write_addr_space') as write_callback_mock, \
             patch(__name__ + '.' + 'read_addr_space', return_value=1) as read_callback_mock:
 
-            {% if is_mem_readable(node) -%}
+            {% if node.is_sw_readable -%}
             # checks single unit accesses at the first entry, the last entry and a random entry in
             # in each case check a 0, max value and random value being read
             for entry in [0, random.randint(0,{{node.get_property('mementries')-1}}), {{node.get_property('mementries')-1}}]:
@@ -606,7 +606,7 @@ class {{top_node.type_name}}_TestCase(unittest.TestCase):
             read_callback_mock.reset_mock()
             {% endif %}
 
-            {% if is_mem_writable(node) -%}
+            {% if node.is_sw_writable -%}
             # checks single unit accesses at the first entry, the last entry and a random entry in
             # in each case check a 0, max value and random value being read
             for entry in [0, random.randint(0,{{node.get_property('mementries')-1}}), {{node.get_property('mementries')-1}}]:
