--- a/peakrdl/python/templates/addrmap_tb.py.jinja
+++ b/peakrdl/python/templates/addrmap_tb.py.jinja
@@ -22,21 +22,48 @@ def read_addr_space(addr: int, width: int, accesswidth: int):
     assert isinstance(accesswidth, int)
     return 0
 
-
 def write_addr_space(addr: int, width: int, accesswidth: int,  data: int):
     assert isinstance(addr, int)
     assert isinstance(width, int)
     assert isinstance(accesswidth, int)
     assert isinstance(data, int)
 
-
 def read_callback(addr: int, width: int, accesswidth: int):
     return read_addr_space(addr=addr, width=width, accesswidth=accesswidth)
 
+def read_block_addr_space(addr: int, width: int, accesswidth: int, length:int) -> Array:
+    assert isinstance(addr, int)
+    assert isinstance(width, int)
+    assert isinstance(accesswidth, int)
+    assert isinstance(length, int)
+
+    if width == 32:
+        typecode = 'L'
+    elif width == 64:
+        typecode = 'Q'
+    elif width == 16:
+        typecode = 'I'
+    elif width == 8:
+        typecode = 'B'
+    else:
+        raise ValueError('unhandled memory width')
+
+    return Array(typecode, [0 for x in range(length)])
+
+def read_block_callback(addr: int, width: int, accesswidth: int, length: int):
+    return read_block_addr_space(addr=addr, width=width, accesswidth=accesswidth, length=length)
 
 def write_callback(addr: int, width: int, accesswidth: int,  data: int):
     write_addr_space(addr=addr, width=width, accesswidth=accesswidth, data=data)
 
+def write_block_addr_space(addr: int, width: int, accesswidth: int,  data: Array):
+    assert isinstance(addr, int)
+    assert isinstance(width, int)
+    assert isinstance(accesswidth, int)
+    assert isinstance(data, Array)
+
+def write_block_callback(addr: int, width: int, accesswidth: int,  data: Array):
+    write_block_addr_space(addr=addr, width=width, accesswidth=accesswidth, data=data)
 
 class {{top_node.type_name}}_TestCase(unittest.TestCase):
 
@@ -665,8 +692,101 @@ class {{top_node.type_name}}_TestCase(unittest.TestCase):
         {%- endif %}
         {%- endfor %}
 
+class {{top_node.type_name}}_TestCase_BlockAccess(unittest.TestCase):
 
+    def setUp(self):
+        self.dut = {{top_node.type_name}}_cls(CallbackSet(read_callback=read_callback,
+                                                          write_callback=write_callback,
+                                                          read_block_callback=read_block_callback,
+                                                          write_block_callback=write_block_callback))
 
+    def test_memory_read_and_write(self):
+    {%- for node in top_node.descendants(unroll=True) -%}
+            {%- if isinstance(node, systemrdlMemNode) %}
+
+        # test access operations (read and/or write) to register:
+        # {{'.'.join(node.get_path_segments())}}
+        with patch(__name__ + '.' + 'write_addr_space') as write_callback_mock,\
+                            patch(__name__ + '.' + 'read_addr_space', return_value=1) as read_callback_mock, \
+                            patch(__name__ + '.' + 'read_block_addr_space',
+                                  return_value=Array('{{get_array_typecode(node.get_property('memwidth'))}}', [0])) as read_block_callback_mock , \
+                            patch(__name__ + '.' + 'write_block_addr_space') as write_block_callback_mock:
+
+            {% if node.is_sw_readable -%}
+            # checks single unit accesses at the first entry, the last entry and a random entry in
+            # in each case check a 0, max value and random value being read
+            for entry in [0, random.randint(0,{{node.get_property('mementries')-1}}), {{node.get_property('mementries')-1}}]:
+                for value in [0, random.randint(0,{{get_memory_max_entry_value_hex_string(node)}}), {{get_memory_max_entry_value_hex_string(node)}}]:
+                    read_block_callback_mock.reset_mock()
+                    read_block_callback_mock.return_value = Array('{{get_array_typecode(node.get_property('memwidth'))}}',
+                                                                  [value])
+                    self.assertEqual(self.dut.{{'.'.join(node.get_path_segments()[1:])}}.read(start_entry=entry, number_entries=1),
+                                                             Array('{{get_array_typecode(node.get_property('memwidth'))}}', [value]))
+                    read_block_callback_mock.assert_called_once_with(
+                                        addr={{node.absolute_address}}+(entry * {{get_memory_width_bytes(node)}}),
+                                        width={{node.get_property('memwidth')}},
+                                        accesswidth={{node.get_property('memwidth')}},
+                                        length=1)
+
+            # check a multi-entry read, if the memory is small do the entire memory, however, if
+            # it is large limit the number of entries to 10
+            entries_to_test = {% if node.get_property('mementries') > 10 %}10{% else %}{{node.get_property('mementries')}}{% endif %}
+            random_data = Array('{{get_array_typecode(node.get_property('memwidth'))}}',
+                                [random.randint(0,{{get_memory_max_entry_value_hex_string(node)}}) for x in range(entries_to_test)])
+
+            read_block_callback_mock.reset_mock()
+            read_block_callback_mock.return_value = random_data
+
+            self.assertEqual(self.dut.{{'.'.join(node.get_path_segments()[1:])}}.read(start_entry=0,
+                                          number_entries=entries_to_test),
+                                          random_data)
+
+            write_callback_mock.assert_not_called()
+            read_callback_mock.assert_not_called()
+            write_block_callback_mock.assert_not_called()
+            read_block_callback_mock.reset_mock()
+            {% endif %}
+
+            {% if node.is_sw_writable -%}
+            # checks single unit accesses at the first entry, the last entry and a random entry in
+            # in each case check a 0, max value and random value being read
+            for entry in [0, random.randint(0,{{node.get_property('mementries')-1}}), {{node.get_property('mementries')-1}}]:
+                for value in [0, random.randint(0,{{get_memory_max_entry_value_hex_string(node)}}), {{get_memory_max_entry_value_hex_string(node)}}]:
+                    write_block_callback_mock.reset_mock()
+                    self.dut.{{'.'.join(node.get_path_segments()[1:])}}.write(start_entry=entry, data=Array('{{get_array_typecode(node.get_property('memwidth'))}}', [value]))
+                    write_block_callback_mock.assert_called_once_with(
+                                        addr={{node.absolute_address}}+(entry * {{get_memory_width_bytes(node)}}),
+                                        width={{node.get_property('memwidth')}},
+                                        accesswidth={{node.get_property('memwidth')}},
+                                        data=Array('{{get_array_typecode(node.get_property('memwidth'))}}', [value]))
+
+            read_callback_mock.assert_not_called()
+            write_callback_mock.assert_not_called()
+            read_block_callback_mock.assert_not_called()
+            write_block_callback_mock.reset_mock()
+
+            # check a multi-entry read, if the memory is small do the entire memory, however, if
+            # it is large limit the number of entries to 10
+            entries_to_test = {% if node.get_property('mementries') > 10 %}10{% else %}{{node.get_property('mementries')}}{% endif %}
+            random_data = Array('{{get_array_typecode(node.get_property('memwidth'))}}',
+                                [random.randint(0,{{get_memory_max_entry_value_hex_string(node)}}) for x in range(entries_to_test)])
+            self.dut.{{'.'.join(node.get_path_segments()[1:])}}.write(start_entry=0, data=random_data)
+
+            write_block_callback_mock.assert_called_once_with(
+                                        addr={{node.absolute_address}},
+                                        width={{node.get_property('memwidth')}},
+                                        accesswidth={{node.get_property('memwidth')}},
+                                        data=random_data)
+
+            read_callback_mock.assert_not_called()
+            write_callback_mock.assert_not_called()
+            read_block_callback_mock.assert_not_called()
+            write_block_callback_mock.reset_mock()
+
+            {%- endif %}
+
+        {%- endif %}
+        {%- endfor %}
 
 
 if __name__ == '__main__':
