--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -10,7 +10,7 @@ import random
 from itertools import combinations
 import math
 
-from ..peakrdl_python import CallbackSet
+from ..lib import CallbackSet
 
 from ..reg_model.{{top_node.type_name}} import {{top_node.type_name}}_cls
 
