--- a/tests/testcases/multifile.rdl
+++ b/tests/testcases/multifile.rdl
@@ -6,5 +6,5 @@ addrmap multifile {
         field { sw=r; } header[31:0] = 0x1;
     } header_reg;
 
-    simple simple_regs;
+    simple__simple_mmap__simple simple_regs;
 };
